<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.PlaylistSongsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Top Bar -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/back_icon"
                app:tint="@android:color/black"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_search"
                    app:tint="@android:color/black"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_dots"
                    app:tint="@android:color/black"/>
            </LinearLayout>
        </RelativeLayout>

        <!-- Big Playlist Icon -->
        <FrameLayout
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_playlist_card">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/music_player_icon_splash_screen"
                />
        </FrameLayout>

        <!-- Title -->
        <TextView
            android:id="@+id/playlistTitle"
            android:text="@string/playlist"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/playlistSongCount"
            android:text="@string/_0_song"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/shuffle"
                android:textAllCaps="false"
                android:background="@drawable/bg_button_white"
                android:textColor="@android:color/black"/>

            <Space
                android:layout_width="16dp"
                android:layout_height="1dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/play"
                android:textAllCaps="false"
                android:background="@drawable/bg_button_white"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <!-- Song List -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistSongsRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
